# markdown-toc-creator

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  README.md  muff.toml  pyproject.toml  requirements.dev  setup.cfg  test123.md  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
markdown_toc_creator/: __init__.py  create_toc.py  exceptions.py  main.py  toc_entry.py
tests/: test_main.py  test_toc_entry.py
tests/data/: test1.md
tests/test_data/: test1.md
tests/test_data/2_failures_and_1_success/after/: header_level_not_continuous.md
tests/test_data/2_failures_and_1_success/before/: header_level_out_of_bounds.md  success.md
tests/test_data/add_horizontal_rules/after_mdformat/: with_heading_default.md  with_heading_no_rules.md  with_heading_proactive_disabled.md
tests/test_data/add_horizontal_rules/after_prettier/: with_heading_default.md  with_heading_no_title.md
tests/test_data/add_toc_title/after/: with_placeholder_minimal.md
tests/test_data/add_toc_title/before/: with_placeholder.md
tests/test_data/proactive/after/: no_heading_below_skip.md  no_heading_default.md  with_extra_placeholders.md
tests/test_data/proactive/before/: proactive_disabled.md  with_extra_placeholders.md
tests/test_data/toc_title/after/: with_placeholder_emoji.md  with_placeholder_no_rules.md  with_placeholder_no_title.md  with_placeholder_spanish.md
