[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown_toc_creator"
version = "0.1.0"
description = "Create table of contents for markdown files"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "click>=8.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/jsh9/markdown-toc-creator"

[project.scripts]
markdown-toc-creator = "markdown_toc_creator.main:main"

[tool.setuptools.packages.find]
exclude = ["tests*", "testing*"]
