[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67", "wheel"]

[project]
name = "markdown_toc_creator"
version = "0.1.3"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "click-config-file-injection-utils>=0.1.1",
  "click>=8.0.0",
]
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
]
description = "Create table of contents for markdown files"
license = {file = "LICENSE"}
readme = {content-type = "text/markdown", file = "README.md"}

[project.scripts]
markdown-toc-creator = "markdown_toc_creator.main:main"

[project.urls]
Homepage = "https://github.com/jsh9/markdown-toc-creator"

[tool.setuptools.packages.find]
exclude = ["testing*", "tests*"]
