[metadata]
name = markdown_toc_creator
version = 0.0.9
description = Create table of contents for markdown files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jsh9/markdown-toc-creator
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    click>=8.0.0
    beautifulsoup4>=4.12.0
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    markdown-toc-creator = markdown_toc_creator.main:main

[bdist_wheel]
universal = True
